Try to fix paragraph margins on mobile

--- a/blogpost.css
+++ b/blogpost.css
@@ -11,8 +11,8 @@ body {
 p, li, dd, ol {
     line-height: 1.5em;
     text-rendering: optimizeLegibility;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 1em;
+    margin-right: 1em;
     max-width: 37em;
 }
 
